# lf_internship_workspace

./: README.md
Deploy_Streamlit/: dep_stream.py  model.pkl  model.py
Numpy/: Python_Numpy_Exercises_Assignment.ipynb
Project_4/: pyproject.toml
Project_4/tests/: test_word2vec.py
Project_4/word2vec/: Embedding.py  Lemmatization.py  Preprocessing.py  Sentence_similarity.py
Project_6/: Project_6.ipynb
Python_Assignment/: Python_Assignment.ipynb
Python_Assignment/space_age/: LICENSE.txt  README.md  setup.py
Python_Assignment/space_age/space/: __init__.py  __main__.py
Python_Assignment/space_age/space_age.egg-info/: PKG-INFO  SOURCES.txt
flask_api/: api.py  model.py
streamlit/: streamlit.py
