[tool.poetry]
name = "word2vec"
version = "0.1.0"
description = ""
authors = ["Anita Baral <baralanita2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.6.2"
Unidecode = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
